# cv-analyzer

./: .gitignore  .tool-versions  package.json  pnpm-lock.yaml
apps/api/: .env.example  .tool-versions  README.md  package.json  pyproject.toml  requirements.txt
apps/api/app/: config.py  main.py
apps/api/app/models/: __init__.py  cv_models.py
apps/api/app/routers/: cv_router.py
apps/api/app/services/: analysis_pdf.py  cv_analyzer.py  cv_parser.py  match_explainer.py  semantic_matcher.py
apps/api/app/utils/: __init__.py  file_validator.py  text_preprocess.py
apps/api/cv_analyzer_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_analyze.py  test_health.py  test_match_explainer.py
apps/web/: next.config.js  package.json
apps/web/app/: globals.css  layout.tsx  page.module.css  page.tsx
apps/web/app/(pages)/history/: history.module.css  page.tsx
apps/web/app/history/: history.module.css  page.tsx
apps/web/app/results/: page.tsx  results.module.css
apps/web/components/: SiteShell.module.css  SiteShell.tsx
apps/web/components/about-section/: AboutSection.module.css  AboutSection.tsx
apps/web/components/home/: AnalysisResults.tsx  AnalyzerForm.tsx  HomeAnalyzer.module.css  HomeAnalyzer.tsx
apps/web/components/page-header/: PageHeader.module.css  PageHeader.tsx
apps/web/components/page-layout/: PageLayout.module.css  PageLayout.tsx
apps/web/components/ui/: surface.module.css
apps/web/lib/: analysis-format.ts  analyze-client.ts  history-storage.ts  latest-result-session.ts  strings-uk.ts  types.ts
