dependencies = [
  "fastapi",
  "uvicorn[standard]",
  
  # LLM / LangChain
  "langchain",
  "langchain-openai",
  "langchain-community",  
  "langchain-core",
  
  # LLM Providers (optional)
  "ollama",  # For local development
  "google-generativeai",  # For production (Gemini)      
  
  # Config & validation
  "pydantic",
  "pydantic-settings",    
  "python-dotenv",
  
  # CV parsing 
  "pdfplumber",
  "python-docx",
  "pypdf",                
  "docx2python",        
  
  # HTTP & File handling
  "python-multipart",    
  "aiofiles",        
  
  # HTTP client
  "httpx",              
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",  
  "black",
  "ruff",
  "mypy",
]