dependencies = [
  "fastapi",
  "uvicorn[standard]",

  # LLM / LangChain
  "langchain",
  "langchain-openai",
  "langchain-community",  
  "langchain-core",
  "langchain-ollama",  # For Ollama integration
  "langchain-google-genai",  # For Gemini integration
  
  # LLM Providers (optional)
  "ollama",  # For local development
  "google-generativeai",  # For production (Gemini)      
  # Config & validation
  "pydantic",
  "pydantic-settings",    
  "python-dotenv",

  # CV parsing 
  "pdfplumber",
  "python-docx",
  "pypdf",                
  "docx2python",        
  "aiofiles",

  # HTTP & File handling
  "python-multipart",    
  "aiofiles",        
  
  # HTTP client
  "httpx",              
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",  
  "black",
  "ruff",
  "mypy",
]
[project]
name = "cv-analyzer-api"
version = "0.1.0"
description = "Backend API for CV Analyzer using FastAPI and LangChain"
requires-python = ">=3.11"