[project]
name = "cv-analyzer-api"
version = "0.1.0"
description = "Backend API for CV Analyzer using FastAPI and LangChain"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "langchain",
  "langchain-openai",
  "langchain-community",
  "langchain-core",
  "langchain-ollama",
  "langchain-google-genai",
  "ollama",
  "google-generativeai",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "pdfplumber",
  "python-docx",
  "pypdf",
  "docx2python",
  "aiofiles",
  "python-multipart",
  "httpx",
  "numpy",
  "sentence-transformers>=2.2.0",
  "fpdf2>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "black",
  "ruff",
  "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
